# otter

./: .amlignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  submit.sh
.github/workflows/: default.yaml
otter/data/: datasets.py  labelled_array.py  utils.py
otter/data/normalisation/: compute_stats.py  utils.py
otter/data/source/: convert_saved_zarr_to_memmap.py  download_weatherbench_data.py  utils.py
otter/eval_utils/: parse_wb_data.py  power_spectrum.py
otter/evaluate/: plot_results.py  plot_weatherbench_output.py  save_forecasts.py  weatherbench.py  weatherbench_probabilistic.py
otter/experiment/: eval.py  monitoring.py  namegen.py  rollout_finetune.py  run_state.py  train.py  utils.py
otter/experiment/config/: base.yaml  rollout_finetuning.yaml
otter/models/: distributions.py  forecasting_model.py
otter/models/architectures/: attention.py  embeddings.py  mlp.py  moe.py  rope.py  schedulers.py  tokeniser.py  transformer.py  transformer_blocks.py  utils.py
otter/models/losses/: loss_fn.py  weighting.py
otter/plots/: geoplot.py  geoplot_examples.py  plot_power_spectrum_mse.py  plot_score_card.py
tests/architectures/: test_mlp.py  test_moe.py  test_schedulers.py  test_swin_transformer.py  test_swin_utils.py  test_transformer_block.py
tests/configs/: test_config_deterministic.py
tests/data/: test_data_download.py  test_dataset_dates.py  test_labelled_array.py
tests/evaluate/: test_save_forecasts.py
tests/experiment/: test_combined_optimizer.py  test_lr_scheduler.py  test_run_state.py  test_utils.py
(+10 files in other folders)
